wip employees delete

--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -17,10 +17,11 @@
 			<%= b_field.hidden_field :id %>
 			<%= b_field.label b.name %>
 			<%= b_field.collection_check_boxes :offices, b.empty_offices, :floor, :floor %>
-		<% end %>
+		<% end %><br>
 	<% end %>
 	<br>
 
 
 	<%= f.submit %>
 <% end %>
+
